--- a/.github/workflows/ci_dev.yml
+++ b/.github/workflows/ci_dev.yml
@@ -29,15 +29,17 @@ jobs:
 
       SECRET_KEY : ${{ secrets.SECRET_KEY }}
 
-    # services:
-    #   postgres_main:
-    #     image: postgres:15
-    #     env:
-    #       POSTGRES_USER: ${{ env.DB_USER }}
-    #       POSTGRES_PASSWORD:${{ env.DB_PWD }}
-    #       POSTGRES_DB: ${{ env.DB_NAME }}
-    #     ports:
-    #       - 5432:5432
+    services:
+      postgres_main:
+        image: postgres:15
+        env:
+          POSTGRES_USER: ${{ env.DB_USER }}
+          POSTGRES_PASSWORD:${{ env.DB_PWD }}
+          POSTGRES_DB: ${{ env.DB_NAME }}
+        ports:
+          - 5432:5432
+        #options: >-
+
 
 
     steps: # Actions
